# cpp.sousse

./: .env.example  .gitignore  .tauri-middleware-backup.ts  .vercelignore  ARCHITECTURE.js  BaseRAG.js  FILES_MANIFEST.md  INDEX.md  INTEGRATION_CHECKLIST.md  MODE_SYSTEM.md  NAVIGATION.md  README.md  README_MODES.txt  SUMMARY.md  WATCHER_README.md  build-desktop.sh  configure-app.ps1  create-admin-direct.js  create-admin.js  deploy.sh  forge-desktop.bat  forge-desktop.ps1  forge-desktop.sh  forge-maintenance.ps1  next.config.ts  next.config.ts.bak  package-lock.json  package.json  package.json.bak  populate_bdd.py  prisma.config.ts  prompt-corrections-mode-local.md  prompte-procedure-dynamique.md  quick-build.ps1  quick-update.ps1  release-tagger.ps1  seed-neon.js  seed-simple.js  seed-with-adapter.js  sync-output.txt  (+8 more)
.idx/: dev.nix
.local-db/: chroma-index.json  local-db-manifest.json
data/: arborescance.json  procedure-demarrage-CRF.json
docs/: blueprint.md
prisma/: apply-schema.ts  schema.prisma  seed.ts
public/: vscode-theme.css
scratch/: check_chroma_db.py  run_chroma_test.ts
scripts/: copy-installers.mjs  copy-tauri-installers.js  generate-updater-keys.mjs  restore-crf-procedure.ts  tauri-build.mjs  (+1 more)
src/: auth.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_seed.sql
src-tauri/src/: local_db.rs  main.rs  offline_generator.rs
src-tauri/src/vector_store/: embedding.rs  indexer.rs  mod.rs  search.rs  storage.rs  types.rs
(+291 files in other folders)
